// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SleepingScreenTemplate UnitTest renders correctly 1`] = `
<Component>
  <Component
    isDesktop={true}
  >
    Sweet dreams...
  </Component>
  <Component
    onPress={[Function]}
  >
    test
  </Component>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Component
      hours={0}
      minutes={0}
      mode="meridian"
      timeMeridianStyle={
        Object {
          "fontSize": 22,
        }
      }
      timeStyle={
        Object {
          "fontSize": 48,
        }
      }
    />
  </View>
  <Component
    onPress={[Function]}
  >
    Wake Up
  </Component>
</Component>
`;

exports[`SleepingScreenTemplate UnitTest renders correctly 2`] = `
<Component>
  <Component
    isDesktop={true}
  >
    よい夢を...
  </Component>
  <Component
    onPress={[Function]}
  >
    test
  </Component>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Component
      hours={0}
      minutes={0}
      mode="meridian"
      timeMeridianStyle={
        Object {
          "fontSize": 22,
        }
      }
      timeStyle={
        Object {
          "fontSize": 48,
        }
      }
    />
  </View>
  <Component
    onPress={[Function]}
  >
    起きる
  </Component>
</Component>
`;
